--- a/server/package.json
+++ b/server/package.json
@@ -8,11 +8,13 @@
     "body-parser": "^1.20.2",
     "colors": "^1.4.0",
     "cors": "^2.8.5",
+    "csv-parser": "^3.0.0",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.8.0",
     "mongoose": "^8.5.4",
+    "multer": "*",
     "nodemailer": "^6.9.15",
     "nodemon": "^3.1.4",
     "router": "^1.3.8"
