--- a/server/package.json
+++ b/server/package.json
@@ -6,6 +6,7 @@
   "type": "module",
   "dependencies": {
     "body-parser": "^1.20.2",
+    "bull": "^4.16.4",
     "colors": "^1.4.0",
     "cors": "^2.8.5",
     "csv-parser": "^3.0.0",
